update lab book with sexual family-based linkage map plan. Add Jens docs for original linkage map

--- a/docs/lab_book/lab_book.tex
+++ b/docs/lab_book/lab_book.tex
@@ -1572,6 +1572,9 @@ Linkage mapping softwares are not designed to handle individuals with mixed ploi
 
 I can redo the linkage map from scratch with the same SNP calling pipeline as our other samples and use the intersect.
 
+Update: 06.06.2018
+
+Tha last RADseq library (RADwasp13 + 13b) for Casper's association mapping comes from the very same genetic background as my samples. This library contains 187 samples split into 20 families
 
 \chapter{TO DO}
 \begin{itemize}
