document comparison of original linkage map vs current datasets genome coverages and SNPs

--- a/docs/lab_book/lab_book.tex
+++ b/docs/lab_book/lab_book.tex
@@ -1106,13 +1106,13 @@ This cross contains 588 individuals, of which 530 made it through the pipeline. 
 \item Ploidy counts: 314 diploids, 216 haploids
 \end{itemize}
 
-\begin{figure}
-\begin{center}
-\includegraphics[width=\textwidth]{final_samples/hom_Sex_popgroup_d20_C.pdf}
-\caption{Distribution of the proportion of homozygosity among variant sites per individuals. Populations was run with all individuals from cross C together without max-obs-het filter. Individuals are colored based on sex. The red dashed vertical line represent the arbitrary (conservative) threshold I defined earlier to separate ploidy from grouped populations runs.}
-\label{C_hom_grouped}
-\end{center}
-\end{figure}
+%\begin{figure}
+%\begin{center}
+%\includegraphics[width=\textwidth]{final_samples/hom_Sex_popgroup_d20_C.pdf}
+%\caption{Distribution of the proportion of homozygosity among variant sites per individuals. Populations was run with all individuals from cross C together without max-obs-het filter. Individuals are colored based on sex. The red dashed vertical line represent the arbitrary (conservative) threshold I defined earlier to separate ploidy from grouped populations runs.}
+%\label{C_hom_grouped}
+%\end{center}
+%\end{figure}
 \FloatBarrier
 \section{CSD}
 \subsection{Finding centromeres}
